--- a/src/components/grid-card/grid-card.sass
+++ b/src/components/grid-card/grid-card.sass
@@ -66,7 +66,7 @@
       position: relative
       z-index: 3
       transition: transform .2s ease, margin .2s ease
-      
+
     > .info
       height: 0
       opacity: 0
@@ -134,7 +134,7 @@
           font-weight: bold
           position: absolute
           right: 0
-          white-space: nowrap
+          white-space: pre
 
         &.-block
           width: 100%
@@ -211,7 +211,7 @@
 
       > .info
         max-width: 60rem
-        
+
         > p
           font-size: 1.4rem
 
