--- a/src/components/parallax-scroll/parallax-scroll.sass
+++ b/src/components/parallax-scroll/parallax-scroll.sass
@@ -1,4 +1,4 @@
-.parallax-device
+.parallax-scroll
   position: relative
 
   > .parallax-frame
@@ -35,4 +35,3 @@
       width: 20.8rem
       > .parallax-content
         padding: 2.6rem 1.3rem
-      
