--- a/src/components/text-block-multiple/text-block-multiple.sass
+++ b/src/components/text-block-multiple/text-block-multiple.sass
@@ -16,6 +16,7 @@
       > .subheading
         font-size: 4rem
         font-weight: normal
+        white-space: pre-line
 
       > .text
         margin-top: 1.6rem
