--- a/src/components/text-block/text-block.sass
+++ b/src/components/text-block/text-block.sass
@@ -12,6 +12,7 @@
     > .subheading
       font-size: 4rem
       font-weight: normal
+      white-space: pre-line
 
     > .text
       margin: 2rem 0
@@ -39,7 +40,7 @@
 
       &:hover::after
         margin: 2rem 0 0 2.5rem
-        
+
     > img
       margin-top: 7rem
       width: 100%
