'Paykartan'-case: Update images

--- a/src/cases-picular.pug
+++ b/src/cases-picular.pug
@@ -5,7 +5,7 @@ block vars
 
 block content
   +header-hero('Picular', '-subpage -case -inverted', 'Google, but for colors')
-  +large-image('./images/picular-1.jpg', 2880, 1276)
+  +large-image('./images/picular-1.jpg', 2880, 1276, 'picular')
   +text-block('Search engine for colors', `Picular is a rocket fast primary color generator using Google's image search. If you ever needed the perfect yellow hex code from a banana, this is the tool for you.`, ['link', 'Visit the site', 'https://picular.co/'])
   +bookmark-block('Search engine for colors',
   `Picular is a rocket fast primary color generator using Google's image search. If you ever needed the perfect yellow hex code from a banana, this is the tool for you.`,
