--- a/src/components/large-image/large-image.sass
+++ b/src/components/large-image/large-image.sass
@@ -6,6 +6,15 @@
     max-width: 100%
     min-height: 50rem
     object-fit: cover
+    margin: auto
+
+  &.-small-image
+    padding: 5rem 0
+    background: red
+    text-align: center
+
+    > img
+      min-height: 20rem
 
   > .badges
     position: absolute
