--- a/src/cases-paykartan.pug
+++ b/src/cases-paykartan.pug
@@ -5,7 +5,7 @@ block vars
 
 block content
   +header-hero('Paykartan', '-subpage -case -inverted', 'Who needs a wallet anyway?')
-  +large-image('./images/paykartan-1.jpg', 2880, 1276)
+  +large-image('./images/paykartan-1.png', 590, 530, '', '#FFD2D2')
   +text-block('Lunch time and… #!?@%!!\nYou forgot your wallet…', `Paykartan.se is a web app that shows all restaurants near you where you can pay with your smartphone. The app includes Swish, Apple Pay and Beam.`, ['link', 'Visit the site', 'https://paykartan.se/'])
   +bookmark-block(
     'No worries',
