Add transitions to Picular case page

--- a/src/components/projects-block/projects-block.sass
+++ b/src/components/projects-block/projects-block.sass
@@ -8,7 +8,7 @@
     max-width: $max-width
     padding: 9.6rem 3rem 0
     font-weight: normal
-    
+
     > .block
       display: inline-flex
       justify-content: space-between
@@ -42,6 +42,10 @@
           margin: 2rem 0 0 2.5rem
 
     > .project
-      margin-left: -2.8rem
-      margin-right: -2.8rem
-          
+      > .grid-block
+        padding-left: 0
+        padding-right: 0
+
+        > .grid
+          padding-left: 0
+          padding-right: 0
