--- a/src/index.sass
+++ b/src/index.sass
@@ -1,6 +1,7 @@
 @import './settings'
 @import './base'
 @import './fonts'
+@import './inview.sass'
 @import './components/case-block/case-block.sass'
 @import './components/error-block/error-block.sass'
 @import './components/footer-block/footer-block.sass'
