--- a/src/components/bookmark-block/bookmark-block.sass
+++ b/src/components/bookmark-block/bookmark-block.sass
@@ -5,6 +5,7 @@
     display: flex
     flex-direction: row
     justify-content: space-between
+    align-items: center
     margin: auto
     max-width: $max-width
     padding: 8.6rem 3rem
