Add 'Retts plus'-showcase

--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -15,5 +15,5 @@ include bookmark-block/bookmark-block.pug
 include parallax-scroll/parallax-scroll.pug
 include parallax-object/parallax-object.pug
 include parallax-object-block/parallax-object-block.pug
-include slide-in/slide-in.pug
 include slide-in-block/slide-in-block.pug
+include video-block/video-block.pug
