--- a/src/cases-retts-plus.pug
+++ b/src/cases-retts-plus.pug
@@ -5,20 +5,31 @@ block vars
 
 block content
   +header-hero('Retts Plus', '-subpage -case -dark', 'Safe medical decisions')
-  +large-image('./images/retts-plus-1.jpg')
+  +video-block('./videos/retts-plus.mp4', './images/retts-plus-video.jpg', '#111722')
   +text-block-multiple(
     'Efficiency for patients',
-    `<b>Explain the product</b> startup Cowboy came to Ueno with a prototype and a name. We worked with them to develop a fully fleshed-out brand, ready to conquer the world.`,
+    `Predicare provide 95% of the emergency care units in Sweden, and many in Norway, with a system that algorithmically classifies a patient according to the severity of their symptoms and suggests the next course of action.`,
     [
-      `<b>Insert backstory</b>, adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, qui. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, qui.`,
-      `Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, qui. Lorem ipsum dolor sit amet, consectetur adipiscing elit.`,
-      `<b>What we did</b>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, qui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, qui. Lorem ipsum dolor sit amet, consectetur adipiscing elit.`
+      `RETTS, Rapid Emergency Triage and Treatment System, works by measuring and assessing a number of vital parameters at the first examination, as well as by gathering a structured and standardised medical history regarding the reason for the visit and the patient’s current symptoms.`,
+      `From the majority of user tests and surveys we worked on a digital user interface that took advantage of the entire RETTS capability. We also developed a timeline that logged all interactions with each patient to provide a clearer overview of the patient's entire care stay.`,
+      `This project was nominated in the Design S, Sweden’s biggest and most comprehensive design award, backed by the entire design industry. The award is aimed at professional designers, architects, individual specialists, producers and companies that work with design in a broad sense.`
     ],
     `#1A2132`, `#fff`)
   +slide-in-block(
-    './images/retts-plus-1.jpg',
-    'You U and I',
-    'Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, qui.',
+    './images/retts-plus-2.png',
+    'A clear overview',
+    `Giving a doctor or nurse an overview of the patient's visit is a key feature for making the right decision and giving proper care. At the right time.`,
     '#161D2B', '#fff')
+  +slide-in-block(
+    './images/retts-plus-3.png',
+    'Every step on the way ',
+    `We developed a timeline that showed the entire patient's journey from first contact until it was time to go home. Thanks to this update we improved the ability to track and improve the process during peoples visits at the hospitals. `,
+    '#161D2B', '#fff', 'right')
+
+  +parallax-object-block([
+      {image: './images/retts-plus-4.png', speed: -20, startPos: 17},
+      {image: './images/retts-plus-5.png', speed: 11, startPos: -39}
+      ], '#0C0F16', 'diagonal')
+
   +projects-block('Retts Plus', '#1A2132', '#fff')
   +footer-block()
