--- a/src/components/parallax-object/parallax-object.pug
+++ b/src/components/parallax-object/parallax-object.pug
@@ -1,3 +1,3 @@
-mixin parallax-object(image, speed, startPos)
+mixin parallax-object(image, speed, startPos, diagonal)
   .parallax-object(data-parallax-speed= speed)
-    img.parallax-background(src=image, style=`top: ${startPos}%`)
+    img.parallax-background(src=image, style=`top: ${startPos}%`, class=diagonal && `-diagonal`)
