Add transitions to Retts Plus case page

--- a/src/components/text-block-multiple/text-block-multiple.pug
+++ b/src/components/text-block-multiple/text-block-multiple.pug
@@ -7,5 +7,5 @@ mixin text-block-multiple(title, text, content = [], background, color)
         p.text!= text
 
       .box-right
-        each test in content
-          p!= test
+        each paragraf in content
+          p!= paragraf
