Optimize images + Various fixes

--- a/src/cases-paykartan.pug
+++ b/src/cases-paykartan.pug
@@ -5,7 +5,7 @@ block vars
 
 block content
   +header-hero('Paykartan', '-subpage -case -inverted', 'Who needs a wallet anyway?')
-  +large-image('./images/paykartan-1.png', 590, 530, '', '#FFD2D2')
+  +large-image('./images/cases/paykartan-1.png', 590, 530, '', '#FFD2D2')
   +text-block('Lunch time and… #!?@%!!\nYou forgot your wallet…', `Paykartan.se is a web app that shows all restaurants near you where you can pay with your smartphone. The app includes Swish, Apple Pay and Beam.`, ['link', 'Visit the site', 'https://paykartan.se/'])
   +bookmark-block(
     'No worries',
@@ -15,15 +15,15 @@ block content
       {name: 'Eat', image: './images/icons/hamburger.svg'},
       {name: 'Pay (yes, you must do this step)', image: './images/icons/phone.svg'}
       ],
-      ['image', './images/paykartan-2.png'],
+      ['image', './images/cases/paykartan-2.png'],
       '#FFD2D2', '',
       'left'
       )
-  +text-block('One step ahead', `Paykartan is just a nice buffet of choices. Get that nice overview of your city and all the yummy places nearby. `, ['image', 'Paykartan Screenshoot - gothenburg', './images/paykartan-3.jpg'])
+  +text-block('One step ahead', `Paykartan is just a nice buffet of choices. Get that nice overview of your city and all the yummy places nearby. `, ['image', 'Paykartan Screenshoot - gothenburg', './images/cases/paykartan-3.jpg'])
   +parallax-object-block(
     [
-      {image: './images/paykartan-phone-1.png', speed: -20, startPos: 17},
-      {image: './images/paykartan-phone-2.png', speed: 11, startPos: -39}
+      {image: './images/cases/paykartan-phone-1.png', speed: -20, startPos: 17},
+      {image: './images/cases/paykartan-phone-2.png', speed: 11, startPos: -39}
       ],
       '#FFD2D2'
       )
