--- a/src/components/bookmark-block/bookmark-block.sass
+++ b/src/components/bookmark-block/bookmark-block.sass
@@ -40,6 +40,7 @@
 
         &.-text
           margin: 1.6rem 0 4.1rem
+          opacity: 0.9
 
         > img
           width: 1.7rem
@@ -49,6 +50,7 @@
 
         > span
           margin-left: 1.8rem
+          opacity: 0.9
 
       > .subheading
         font-size: 4rem
