--- a/src/cases-retts-plus.pug
+++ b/src/cases-retts-plus.pug
@@ -5,7 +5,7 @@ block vars
 
 block content
   +header-hero('Retts Plus', '-subpage -case -dark', 'Safe medical decisions')
-  +video-block('./videos/retts-plus.mp4', './images/retts-plus-video.jpg', '#111722')
+  +video-block('./videos/retts-plus.mp4', './images/cases/retts-plus-video.jpg', '#020305')
   +text-block-multiple(
     'Efficiency for patients',
     `Predicare provide 95% of the emergency care units in Sweden, and many in Norway, with a system that algorithmically classifies a patient according to the severity of their symptoms and suggests the next course of action.`,
@@ -16,20 +16,18 @@ block content
     ],
     `#1A2132`, `#fff`)
   +slide-in-block(
-    './images/retts-plus-2.png',
+    './images/cases/retts-plus-2.png',
     'A clear overview',
     `Giving a doctor or nurse an overview of the patient's visit is a key feature for making the right decision and giving proper care. At the right time.`,
     '#161D2B', '#fff')
   +slide-in-block(
-    './images/retts-plus-3.png',
+    './images/cases/retts-plus-3.png',
     'Every step on the way ',
     `We developed a timeline that showed the entire patient's journey from first contact until it was time to go home. Thanks to this update we improved the ability to track and improve the process during peoples visits at the hospitals. `,
     '#161D2B', '#fff', 'right')
-
   +parallax-object-block([
-      {image: './images/retts-plus-4.png', speed: -20, startPos: 17},
-      {image: './images/retts-plus-5.png', speed: 11, startPos: -39}
+      {image: './images/cases/retts-plus-4.png', speed: -20, startPos: 17},
+      {image: './images/cases/retts-plus-5.png', speed: 11, startPos: -39}
       ], '#0C0F16', 'diagonal')
-
   +projects-block('Retts Plus', '#1A2132', '#fff')
   +footer-block()
