--- a/src/components/devices-block/devices-block.pug
+++ b/src/components/devices-block/devices-block.pug
@@ -2,4 +2,4 @@ mixin devices-block()
   .devices-block
     .inner
 
-      img(src='./images/picular-3.png')
+      img(src='./images/cases/picular-3.png')
