--- a/src/components/parallax-object-block/parallax-object-block.sass
+++ b/src/components/parallax-object-block/parallax-object-block.sass
@@ -19,23 +19,23 @@
       justify-content: space-between
       position: relative
 
-      &.-diagonassl
-        transform: rotate(60deg)
-        margin-top: -60rem
-        width: 80vw
-        position: relative
-        margin-top: -52%
-        margin-left: -50%
-
   &.-diagonal
     height: 50vw
     width: 100%
-    max-height: 70rem
+    max-height: 80rem
+    transform: scale(1.2)
+    margin: 7rem 0
 
     > .inner > .content
       transform: rotate(60deg)
-      margin-top: -60rem
       width: 80vw
       position: relative
-      margin-top: -50%
+      margin-top: -43%
       margin-left: -50%
+
+    @media screen and (max-width: 1350px)
+      transform: scale(1)
+      margin: 0
+
+      > .inner > .content
+        margin-top: -50%
