--- a/src/components/slide-in-block/slide-in-block.sass
+++ b/src/components/slide-in-block/slide-in-block.sass
@@ -41,7 +41,7 @@
         max-width: 52rem
         margin-top: 1.6rem
         line-height: 2.8rem
-        opacity: 0.8
+        opacity: 0.9
 
   &.-right
     flex-direction: row-reverse
@@ -49,6 +49,7 @@
     > .slider
       margin-right: -15.5rem
       margin-left: 0
+      padding-top: 0
 
     > .inner
       position: relative
@@ -64,6 +65,7 @@
 
     &.-right
       flex-direction: column !important
+      padding-top: 4rem
 
     > .slider
       max-width: 100%
