--- a/src/components/text-block-multiple/text-block-multiple.sass
+++ b/src/components/text-block-multiple/text-block-multiple.sass
@@ -22,6 +22,7 @@
         margin-top: 1.6rem
         font-size: 2rem
         line-height: 2.8rem
+        opacity: 0.9
 
     > .box-right
       width: 60%
@@ -33,6 +34,7 @@
       > p
         font-size: 1.8rem
         line-height: 2.5rem
+        opacity: 0.9
 
         &:not(:last-child)
           margin-bottom: 2.5rem
