--- a/src/components/text-block/text-block.pug
+++ b/src/components/text-block/text-block.pug
@@ -5,6 +5,6 @@ mixin text-block(title, text, content = [], background, color)
       p.text= text
 
       if content[0] === 'image'
-        img(src=content[2], alt=content[1])
+        img(src=content[2], alt=content[1], class=!content[3] && `-shadow`, style=`${content[3] ? `width:${content[3]}px;` : ''}`)
       else if content[0] === 'link'
         a.link(href=content[2])= content[1]
