--- a/src/components/text-block/text-block.sass
+++ b/src/components/text-block/text-block.sass
@@ -19,7 +19,7 @@
       font-size: 2rem
       max-width: 56rem
       line-height: 2.8rem
-      color: #737780
+      opacity: 0.9
 
     > .link
       margin-top: -0.7rem
@@ -42,7 +42,10 @@
         margin: 2rem 0 0 2.5rem
 
     > img
-      margin-top: 7rem
+      margin: 7rem auto 0
+      max-width: 100%
       width: 100%
       height: auto
-      box-shadow: 0 0 30px 0 rgba(84,98,109,0.07)
+
+      &.-shadow
+        box-shadow: 0 0 30px 0 rgba(84,98,109,0.1)
