Various fixes on 'Retts Plus'

--- a/src/cases-retts-plus.pug
+++ b/src/cases-retts-plus.pug
@@ -5,7 +5,7 @@ block vars
 
 block content
   +header-hero('Retts Plus', '-subpage -case -dark', 'Safe medical decisions')
-  +video-block('./videos/retts-plus.mp4', './images/cases/retts-plus-video.jpg', '#020305')
+  +video-block('./videos/retts-plus.mp4', './images/cases/retts-plus-video.jpg', '#020305', [{image: './images/cases/retts-plus-badge-design-s.svg'}])
   +text-block-multiple(
     'Efficiency for patients',
     `Predicare provide 95% of the emergency care units in Sweden, and many in Norway, with a system that algorithmically classifies a patient according to the severity of their symptoms and suggests the next course of action.`,
