--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -17,3 +17,4 @@ include parallax-object/parallax-object.pug
 include parallax-object-block/parallax-object-block.pug
 include slide-in-block/slide-in-block.pug
 include video-block/video-block.pug
+include text-grid-block/text-grid-block.pug
