--- a/src/components/large-image/large-image.sass
+++ b/src/components/large-image/large-image.sass
@@ -25,7 +25,7 @@
 
     > .badge
       background: white
-      border: 0.1rem solid #e8e8e8
+      border: 0.1rem solid rgba(black, 0.15)
       border-radius: 0.6rem
       margin-bottom: 1.2rem
       padding: 0.8rem 1rem
