--- a/src/components/video-block/video-block.sass
+++ b/src/components/video-block/video-block.sass
@@ -1,5 +1,6 @@
 .video-block
   background: black
+  position: relative
 
   > .inner
     height: auto
@@ -7,3 +8,37 @@
     margin-bottom: -3px
     max-width: $max-width
     margin: auto
+
+  > .badges
+    position: absolute
+    top: 4rem
+    left: 4rem
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif
+    color: #999
+
+    > .badge
+      background: white
+      border: 0.1rem solid rgba(black, 0.15)
+      border-radius: 0.6rem
+      margin-bottom: 1.2rem
+      padding: 0.8rem 1rem
+      display: flex
+      align-items: center
+      box-shadow: 0 0.5rem 2rem -0.5rem rgba(black, 0.1)
+      min-width: 17rem
+
+      &.-center
+        justify-content: center
+
+      .title, .date
+        display: block
+        line-height: 1.4
+        margin-left: 1rem
+
+      .title
+        font-size: 1.1rem
+        font-weight: 700
+
+      .date
+        font-size: 1rem
+        font-weight: 400
