--- a/src/index.sass
+++ b/src/index.sass
@@ -22,3 +22,4 @@
 @import './components/parallax-object-block/parallax-object-block.sass'
 @import './components/slide-in-block/slide-in-block.sass'
 @import './components/video-block/video-block.sass'
+@import './components/text-grid-block/text-grid-block.sass'
