--- a/src/inview.sass
+++ b/src/inview.sass
@@ -21,6 +21,7 @@ body.-case
   .text-block-multiple > .inner,
   .bookmark-block .content,
   .slide-in-block .inner,
+  .slide-in-block .slider,
   .devices-block > .inner
     opacity: 0
     transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out
@@ -40,6 +41,7 @@ body.-case
   .bookmark-block .content.-inview,
   .devices-block.-inview > .inner,
   .slide-in-block.-inview > .inner,
+  .slide-in-block.-inview > .slider,
   .grid-block.-more-projects.-inview .item
     transform: none
     opacity: 1
