--- a/src/cases-signa-aventus.pug
+++ b/src/cases-signa-aventus.pug
@@ -16,6 +16,7 @@ block content
     ],
     `#1A2132`, `#fff`)
 
+  +text-grid-block([{image: './images/cases/sigma-aventus-2.png'}, {title: 'The sky’s the limit.', desc: `Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, qui.`}, {image: './images/cases/sigma-aventus-2.png'}, {image: './images/cases/sigma-aventus-2.png'}], '', '#fff')
 
   +text-block('One flight ahead', `Signa Aventus is just a nice buffet of choices. Get that nice overview of your city and all the yummy places nearby. `, ['image', 'Paykartan Screenshoot - gothenburg', './images/cases/sigma-aventus-2.png', 882], '#161D2B', '#fff')
 
