Copy edits on 'Retts Plus'-case

--- a/src/cases-retts-plus.pug
+++ b/src/cases-retts-plus.pug
@@ -8,10 +8,10 @@ block content
   +video-block('./videos/retts-plus.mp4', './images/cases/retts-plus-video.jpg', '#020305', [{image: './images/cases/retts-plus-badge-design-s.svg'}])
   +text-block-multiple(
     'Efficiency for patients',
-    `Predicare provide 95% of the emergency care units in Sweden, and many in Norway, with a system that algorithmically classifies a patient according to the severity of their symptoms and suggests the next course of action.`,
+    `Predicare provides 95% of emergency departments in Sweden, and many in Norway, with a system that algorithmically classifies a patient according to the severity of their symptoms, and suggests the next course of action.`,
     [
       `RETTS, Rapid Emergency Triage and Treatment System, works by measuring and assessing a number of vital parameters at the first examination, as well as by gathering a structured and standardised medical history regarding the reason for the visit and the patient’s current symptoms.`,
-      `From the majority of user tests and surveys we worked on a digital user interface that took advantage of the entire RETTS capability. We also developed a timeline that logged all interactions with each patient to provide a clearer overview of the patient's entire care stay.`,
+      `Based on a thorough user research phase we created a digital user interface that took advantage of the entire RETTS capability. We also developed a timeline that logged all interactions with each patient to provide a clearer overview of the patient’s entire care stay.`,
       `This project was nominated in the Design S, Sweden’s biggest and most comprehensive design award, backed by the entire design industry. The award is aimed at professional designers, architects, individual specialists, producers and companies that work with design in a broad sense.`
     ],
     `#1A2132`, `#fff`)
@@ -22,8 +22,8 @@ block content
     '#161D2B', '#fff')
   +slide-in-block(
     './images/cases/retts-plus-3.png',
-    'Every step on the way ',
-    `We developed a timeline that showed the entire patient's journey from first contact until it was time to go home. Thanks to this update we improved the ability to track and improve the process during peoples visits at the hospitals. `,
+    'Every step on the way',
+    `We developed a timeline that shows the entire patient’s journey from first contact until it was time to go home. This improved the ability to track  events during a patient’s visit better, and enabled nurses and doctors to take make the correct decision at any point.`,
     '#161D2B', '#fff', 'right')
   +parallax-object-block([
       {image: './images/cases/retts-plus-4.png', speed: -20, startPos: 17},
