Parallaxes performance fix + Various fixes

--- a/src/components/footer-block/footer-block.sass
+++ b/src/components/footer-block/footer-block.sass
@@ -60,11 +60,14 @@
 
   @media screen and (max-width: 590px)
     > .inner
-      > .logo
+      a > .logo
         display: none
 
-      > .social > a
-        margin-right: 3rem
+      > .social
+        width: 100%
+
+        > a
+          margin-right: 3rem
 
       > .social > .mail
         width: 100%
