--- a/src/components/parallax-object/parallax-object.sass
+++ b/src/components/parallax-object/parallax-object.sass
@@ -1,5 +1,7 @@
 .parallax-object
   position: relative
+  transition: transform 200ms ease
+  transform: translateZ(0)
 
   &:nth-child(1)
     margin-right: 2rem
