--- a/src/components/devices-block/devices-block.sass
+++ b/src/components/devices-block/devices-block.sass
@@ -1,5 +1,6 @@
 .devices-block
   background: #F2F5F6
+  overflow: hidden
 
   > .inner
     display: flex
@@ -14,4 +15,3 @@
       max-width: 80rem
       width: 100%
       height: auto
-      
