--- a/src/components/text-grid-block/text-grid-block.sass
+++ b/src/components/text-grid-block/text-grid-block.sass
@@ -12,30 +12,30 @@
   > .blocks
     display: grid
     grid-template-columns: repeat(2, 1fr)
+    overflow: hidden
+    grid-gap: 10rem
 
     > .block
       position: relative
-      left: 0
-      max-width: 90rem
       width: 100%
+      align-self: end
 
       &:nth-child(1)
-        grid-row: span 8
-        overflow: hidden
-        left: -14rem
-
-      &:nth-child(2)
         grid-row: span 2
 
+      &:nth-child(2)
+        grid-row: span 1
+        top: 5rem
+        padding-right: 1rem
+        align-self: center
+
       &:nth-child(3)
-        grid-row: span 8
-        right: 14rem
+        grid-row: span 2
 
       &:nth-child(4)
-        grid-row: span 3
+        grid-row: span 2
         overflow: hidden
-        max-height: 65%
-        left: -14rem
+        margin: -0.3rem
 
       > img
         width: 100%
@@ -51,3 +51,24 @@
         margin-top: 1.6rem
         line-height: 2.8rem
         opacity: 0.9
+
+    @media screen and (max-width: $medium-grid)
+      grid-gap: 5rem
+
+      > .block:nth-child(2)
+        top: 0
+
+    @media screen and (max-width: $small-grid + 100px)
+      grid-gap: 2rem
+      padding-top: 16rem
+
+      > .block
+        &:nth-child(2)
+          top: 40px
+          position: absolute
+          display: block
+          padding: 0 3rem
+
+        &:nth-child(3)
+          grid-row: span 2
+          top: 25vw
