Change order of case blocks in 'See More Projects'-block

--- a/src/components/bookmark-block/bookmark-block.sass
+++ b/src/components/bookmark-block/bookmark-block.sass
@@ -1,5 +1,6 @@
 .bookmark-block
   background: #F2F5F6
+  overflow: hidden
 
   > .inner
     display: flex
@@ -10,7 +11,7 @@
     max-width: $max-width
     padding: 8.6rem 3rem
     font-weight: normal
-    overflow: hidden
+
 
     &.-right
       flex-direction: row-reverse
@@ -41,6 +42,7 @@
         &.-text
           margin: 1.6rem 0 4.1rem
           opacity: 0.9
+          white-space: pre-line
 
         > img
           width: 1.7rem
