--- a/src/components/case-block/case-block.sass
+++ b/src/components/case-block/case-block.sass
@@ -124,7 +124,7 @@
         grid-auto-rows: 41rem
 
         > .item:nth-child(2)
-          grid-row: 1 / span 2
+          grid-row: span 2
 
       @media screen and (max-width: 700px)
         grid-template-columns: auto
@@ -133,4 +133,4 @@
         padding-right: 3rem
 
         > .item:nth-child(2)
-          grid-row: 1 / span 1
+          grid-row: span 1
