--- a/src/components/video-block/video-block.sass
+++ b/src/components/video-block/video-block.sass
@@ -15,6 +15,7 @@
     left: 4rem
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif
     color: #999
+    display: block
 
     > .badge
       background: white
@@ -42,3 +43,14 @@
       .date
         font-size: 1rem
         font-weight: 400
+
+    @media screen and (max-width: $medium-grid)
+      top: 3rem
+      left: 3rem
+
+      > .badge
+        padding: 0.3rem 0.8rem
+        min-width: 0
+
+    @media screen and (max-width: $small-grid)
+      display: none
