Upload better image quality for 'sigma aventus'-case

--- a/src/cases-sigma-aventus.pug
+++ b/src/cases-sigma-aventus.pug
@@ -18,7 +18,7 @@ block content
 
   +text-grid-block([{image: './images/cases/sigma-aventus-2.png'}, {title: 'The sky’s the limit.', desc: `Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, qui.`}, {image: './images/cases/sigma-aventus-3.png'}, {image: './images/cases/sigma-aventus-4.png'}], '', '#fff')
 
-  +text-block('One flight ahead', `Signa Aventus is just a nice buffet of choices. Get that nice overview of your city and all the yummy places nearby. `, ['image', 'Paykartan Screenshoot - gothenburg', './images/cases/sigma-aventus-5.png', 882], '#161D2B', '#fff')
+  +text-block('One flight ahead', `Sigma Aventus is just a nice buffet of choices. Get that nice overview of your city and all the yummy places nearby. `, ['image', 'Paykartan Screenshoot - gothenburg', './images/cases/sigma-aventus-5.png', 882], '#161D2B', '#fff')
 
   +projects-block('Retts Plus', '#1A2132', '#fff')
   +footer-block()
