--- a/src/cases-sigma-aventus.pug
+++ b/src/cases-sigma-aventus.pug
@@ -8,11 +8,10 @@ block content
   +large-image('./images/cases/sigma-aventus-1.jpg')
   +text-block-multiple(
     'Flightmode on',
-    `<b>Explain the product</b> startup Cowboy came to Ueno with a prototype and a name. We worked with them to develop a fully fleshed-out brand, ready to conquer the world.`,
+    `The AVTECH Aventus SIGMA is a unique weather uplink service that sends weather alerts directly to the pilots’ tablet devices. The app is used in the cockpit during flight to optimise comfort and fuel efficiency.`,
     [
-      `Sigma Aventus, works by measuring and assessing a number of vital parameters at the first examination, as well as by gathering a structured and standardised medical history regarding the reason for the visit and the patient’s current symptoms.`,
-      `From the majority of user tests and surveys we worked on a digital user interface that took advantage of the entire RETTS capability. We also developed a timeline that logged all interactions with each patient to provide a clearer overview of the patient's entire care stay.`,
-      `This project was nominated in the Design S, Sweden’s biggest and most comprehensive design award, backed by the entire design industry. The award is aimed at professional designers, architects, individual specialists, producers and companies that work with design in a broad sense.`
+      `Aventus SIGMA, a high-quality tool that very adequately presents Weather hazards (such as Icing, Turbulence, Volcanic ash, etc) to your aircraft, is a real-time weather alerting system which communicates through ACARS and assures your company’s aircraft are notified to new meteorological hazards related to the actual route in the FMS.`,
+      `The design of Aventus SIGMA reduces pilot workload and relieves the crew of difficult and inexact interpretation of weather maps, who sometimes can be 6 hours old.`
     ],
     `#1A2132`, `#fff`)
 
