Add 'Tennis Watch'-case

--- a/src/cases-retts-plus.pug
+++ b/src/cases-retts-plus.pug
@@ -24,7 +24,7 @@ block content
     './images/cases/retts-plus-3.png',
     'Every step on the way',
     `We developed a timeline that shows the entire patient’s journey from first contact until it was time to go home. This improved the ability to track  events during a patient’s visit better, and enabled nurses and doctors to take make the correct decision at any point.`,
-    '#161D2B', '#fff', 'right')
+    '#161D2B', '#fff', '-right')
   +parallax-object-block([
       {image: './images/cases/retts-plus-4.png', speed: -20, startPos: 17},
       {image: './images/cases/retts-plus-5.png', speed: 11, startPos: -39}
