--- a/src/components/case-block/case-block.sass
+++ b/src/components/case-block/case-block.sass
@@ -131,6 +131,8 @@
         grid-auto-rows: 20rem
         padding-left: 3rem
         padding-right: 3rem
+        max-width: calc(100vw - 6rem)
+        width: 70rem
 
         > .item:nth-child(2)
           grid-row: span 1
