--- a/src/index.sass
+++ b/src/index.sass
@@ -23,3 +23,4 @@
 @import './components/slide-in-block/slide-in-block.sass'
 @import './components/video-block/video-block.sass'
 @import './components/text-grid-block/text-grid-block.sass'
+@import './components/center-block/center-block.sass'
