--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -18,3 +18,4 @@ include parallax-object-block/parallax-object-block.pug
 include slide-in-block/slide-in-block.pug
 include video-block/video-block.pug
 include text-grid-block/text-grid-block.pug
+include center-block/center-block.pug
