--- a/src/components/slide-in-block/slide-in-block.sass
+++ b/src/components/slide-in-block/slide-in-block.sass
@@ -25,6 +25,19 @@
     padding: 8.6rem 3rem
     font-weight: normal
     position: relative
+    justify-content: space-between
+
+    &.-tennis-watch
+      background-image: url('./images/cases/tennis-watch-path-background.svg')
+      background-position-y: calc(50% + 150px)
+      background-repeat: repeat-x
+      width: 100%
+      height: 100%
+      background-size: 100%
+
+    > img
+      max-width: 100%
+      object-fit: contain
 
     > .content
       margin-left: 4rem
@@ -39,9 +52,11 @@
       > p
         font-size: 2rem
         max-width: 52rem
+        min-width: 20rem
         margin-top: 1.6rem
         line-height: 2.8rem
         opacity: 0.9
+        white-space: pre-line
 
   &.-right
     flex-direction: row-reverse
@@ -54,11 +69,16 @@
     > .inner
       position: relative
       display: flex
-      justify-content: flex-end
+      flex-direction: row-reverse
+      padding: 0 3rem 8.6rem
 
       > .content
         position: relative
         margin-right: 4rem
+
+  @media screen and (max-width: $medium-grid)
+    > .inner > img
+      max-width: 50%
 
   @media screen and (max-width: $small-grid)
     flex-direction: column
@@ -74,6 +94,16 @@
 
     > .inner
       padding: 3rem
+      flex-direction: column !important
+
+      &.-tennis-watch
+        background-position-y: 40%
+
+      > img
+        margin-top: 5rem
+        max-width: 70%
+        height: auto
+        margin-bottom: 3rem
 
       > .content
-        margin: 0
+        margin: 3rem 0 0
