Copy edits on 'Tennis Watch'-case

--- a/src/components/slide-in-block/slide-in-block.sass
+++ b/src/components/slide-in-block/slide-in-block.sass
@@ -48,6 +48,7 @@
       > .subheading
         font-size: 4rem
         font-weight: normal
+        white-space: pre-line
 
       > p
         font-size: 2rem
