--- a/src/cases-tennis-watch.pug
+++ b/src/cases-tennis-watch.pug
@@ -10,13 +10,14 @@ block content
   +slide-in-block(
     {path: './images/cases/tennis-watch-1.png', width: 427, height: 703, positon: 'inside'},
     'Match trends and performance statistics',
-    `Giving a doctor or nurse an overview of the patient's visit is a key feature for making the right decision and giving proper care. At the right time.`,
+    `Keep track of your progress with statistics and match trend trackning to improve your game. It’s all about winning right?`,
     '#0C0F16', '#fff', '-tennis-watch')
   +slide-in-block(
     {path: './images/cases/tennis-watch-2.png', width: 243, height: 438, positon: 'inside'},
-    'Point by point score tracker',
-    `We developed a timeline that shows the entire patient’s journey from first contact until it was time to go home. This improved the ability to track  events during a patient’s visit better, and enabled nurses and doctors to take make the correct decision at any point.`,
+    'Tennis score tracker and\nstatistics for Apple Watch',
+    `Keeping track of your matches and opponents. Designed for any scoring method.`,
     '#0C0F16', '#fff', '-right')
-  +center-block('Available in app store', '', './images/cases/tennis-watch-3.jpg', './images/cases/tennis-watch-logo.svg', {ios: 'https://itunes.apple.com/us/app/tennis-watch-tennis-score/id959541448?mt=8'}, '', '#fff')
+  //-+center-block('Available in app store', '', './images/cases/tennis-watch-3.jpg', './images/cases/tennis-watch-logo.svg', {ios: 'https://itunes.apple.com/us/app/tennis-watch-tennis-score/id959541448?mt=8'}, '', '#fff')
+  +center-block('Match point.', '', './images/cases/tennis-watch-3.jpg', '', '', '', '#fff')
   +projects-block('Tennis Watch', '#1A2132', '#fff')
   +footer-block()
