--- a/src/cases-tennis-watch.pug
+++ b/src/cases-tennis-watch.pug
@@ -9,7 +9,7 @@ block content
   +center-block('First in the game', 'Tennis Watch was the first tennis app designed for Apple Watch. It turns your Apple Watch into a simple and easy-to-use score tracking device. All matches are stored on your iPhone and sophisticated statistics give you insights on how to improve your game.', '', '', '', '#161D2B', '#fff')
   +slide-in-block(
     {path: './images/cases/tennis-watch-1.png', width: 427, height: 703, positon: 'inside'},
-    'Match trends and performance statistics',
+    'Match trends and\nperformance statistics',
     `Keep track of your progress with statistics and match trend trackning to improve your game. It’s all about winning right?`,
     '#0C0F16', '#fff', '-tennis-watch')
   +slide-in-block(
