--- a/src/components/slide-in-block/slide-in-block.sass
+++ b/src/components/slide-in-block/slide-in-block.sass
@@ -4,6 +4,14 @@
   display: flex
   flex-direction: row
 
+  &.-tennis-watch
+    background-image: url('./images/cases/tennis-watch-path-background.svg')
+    background-position-y: calc(50% + 150px)
+    background-repeat: no-repeat
+    width: 100%
+    height: 100%
+    background-size: 101%
+
   > .slider
     position: relative
     width: 100%
@@ -26,14 +34,6 @@
     font-weight: normal
     position: relative
     justify-content: space-between
-
-    &.-tennis-watch
-      background-image: url('./images/cases/tennis-watch-path-background.svg')
-      background-position-y: calc(50% + 150px)
-      background-repeat: repeat-x
-      width: 100%
-      height: 100%
-      background-size: 100%
 
     > img
       max-width: 100%
@@ -84,6 +84,9 @@
   @media screen and (max-width: $small-grid)
     flex-direction: column
 
+    &.-tennis-watch
+      background-position-y: 40%
+
     &.-right
       flex-direction: column !important
       padding-top: 4rem
@@ -96,9 +99,6 @@
     > .inner
       padding: 3rem
       flex-direction: column !important
-
-      &.-tennis-watch
-        background-position-y: 40%
 
       > img
         margin-top: 5rem
